Scripted test to check that test failure stops release process.